--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc --noEmit && vite build",
-    "preview": "vite preview"
+    "build": "vite build",
+    "preview": "vite preview",
+    "pm2": "pm2 start node_modules/vite/bin/vite.js"
   },
   "dependencies": {
     "@wangeditor/editor": "^5.1.18",
@@ -24,7 +25,7 @@
     "typescript": "^4.6.4",
     "unplugin-auto-import": "^0.11.2",
     "unplugin-vue-components": "^0.22.7",
-    "vite": "^3.1.0",
+    "vite": "^3.1.8",
     "vue-tsc": "^0.40.4"
   }
 }
