--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "pm2": "pm2 start node_modules/vite/bin/vite.js"
+    "dev": "vite --mode development",
+    "build": "vite build --mode production",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@wangeditor/editor": "^5.1.18",
