--- a/.env.development
+++ b/.env.development
@@ -1,4 +1,5 @@
  VITE_NAME='开发环境'
  VITE_ENV = 'development'
  VITE_OUTPUT_DIR = 'dev'
- VITE_APP_BASE_URL='http://localhost:3000/blogReception'
+VITE_APP_BASE_URL0='http://localhost:3000/blogReception'
+VITE_APP_BASE_URL='http://119.91.198.247:3000/blogReception'
