--- a/.env.development
+++ b/.env.development
@@ -1,5 +1,7 @@
  VITE_NAME='开发环境'
  VITE_ENV = 'development'
  VITE_OUTPUT_DIR = 'dev'
-VITE_APP_BASE_URL='http://localhost:3000/blogReception'
-VITE_APP_BASE_URL0='http://119.91.198.247:3000/blogReception'
+
+VITE_APP_BASE_URL='http://localhost:3000'
+VITE_APP_BASE_URL0='http://:3000'
+VITE_APP_BACKSTAGE_URL='http://localhost:8080'
