--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,5 @@
  VITE_NAME='开发环境'
  VITE_ENV = 'production'
  VITE_OUTPUT_DIR = 'pro'
- VITE_APP_BASE_URL='http://119.91.198.247:3000/blogReception'
+ VITE_APP_BASE_URL='http://:3000'
+ VITE_APP_BACKSTAGE_URL='http://:8080'
