--- a/.env.development
+++ b/.env.development
@@ -3,5 +3,5 @@
  VITE_OUTPUT_DIR = 'dev'
 
 VITE_APP_BASE_URL='http://localhost:3000'
-VITE_APP_BASE_URL0='http://:3000'
+VITE_APP_BASE_URL0='http://159.75.239.201:3000'
 VITE_APP_BACKSTAGE_URL='http://localhost:8080'
