--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@wangeditor/editor-for-vue": "^5.1.12",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.1",
+    "dayjs": "^1.11.7",
     "element-plus": "^2.2.17",
     "less": "^4.1.3",
     "unplugin-element-plus": "^0.4.1",
