fix: 修复标题过长问题

--- a/.env.development
+++ b/.env.development
@@ -2,6 +2,6 @@
  VITE_ENV = 'development'
  VITE_OUTPUT_DIR = 'dev'
 
-VITE_APP_BASE_URL='http://localhost:3000'
-VITE_APP_BASE_URL0='http://159.75.239.201:3000'
+VITE_APP_BASE_URL0='http://localhost:3000'
+VITE_APP_BASE_URL='http://159.75.239.201:3000'
 VITE_APP_BACKSTAGE_URL='http://localhost:8080'
